<resources>
    <string name="app_name">TrueCitizenQuiz</string>
    <string name="text_question">My test Question</string>
    <string name="question_declaration">The (U.S.) Declaration of Independence was adopted in 1776.</string>
    <string name="text_true">true</string>
    <string name="text_false">false</string>
    <string name="question_constitution">The Supreme Law of the land is the Constitution.</string>
    <string name="question_amendments">Ths (U.S.) Constitution has 26 Amendments.</string>
    <string name="question_independence_rights">The two rights in the Declaration of Independence are:
        \n \t <b>life</b> \n \t <b>pursuit of happiness</b></string>
    <string name="question_religion">Freedom of religion means:
        \n \t <b>You can practice any religion, or not practice a religion.</b></string>
    <string name="question_government">Journalists is one branch or part of the government.</string>
    <string name="question_government_feds">Congress does not make federal laws.</string>
    <string name="question_government_senators">There are one hundred (100) U.S. senators</string>
    <string name="correct_answer">That\'s correct!</string>
    <string name="wrong_answer">That\'s wrong.</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
</resources>