<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/icon_flagpole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/answer_textView"
        android:text="@string/question_declaration"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="34dp">

        <Button
            android:id="@+id/true_button"
            android:text="@string/text_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/false_button"
            android:text="@string/text_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previous_button"
            android:src="@drawable/baseline_navigate_before_white_18dp"
            android:contentDescription="@string/text_previous"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@android:color/black"
            android:layout_marginEnd="8dp"/>

        <ImageButton
            android:id="@+id/next_button"
            android:src="@drawable/baseline_navigate_next_white_18dp"
            android:contentDescription="@string/text_next"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@android:color/black"/>

    </LinearLayout>


</LinearLayout>